# ai_code_reviewer

./: .ai_reviewer_cache.json  .gitignore  .pre-commit-config.yaml  Documentation.txt  LICENSE  README.md  ai_review_report.html  dashboard.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_reviewer/cli/: main.py
ai_reviewer/config/: __init__.py  config_loader.py
ai_reviewer/core/: apply_engine.py  autofix.py  cache.py  complexity.py  docstring_generator.py  metrics.py  parser.py  ranking.py  scan_engine.py  test_parser_run.py  validator.py
ai_reviewer/reports/: html_exporter.py  html_report.py
ai_reviewer/utils/: file_scanner.py
examples/: sample.py
